backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 134428267718.dkr.ecr.us-east-1.amazonaws.com/backend:latest
          ports:
            - containerPort: 8080
            - containerPort: 8081
          # resources:
          #   limits:
          #     memory: '512Mi'
          #     cpu: '500m'
          #   requests:
          #     memory: '256Mi'
          #     cpu: '250m'
