llm_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
spec:
  type: ClusterIP
  # ports:
  #   - port: 9092
  #     targetPort: 9092
  selector:
    app: llm-service
